Activate search, sort not yet

--- a/frontend/pages/admin_dashboard.html
+++ b/frontend/pages/admin_dashboard.html
@@ -97,8 +97,8 @@
                 </div>
 
                 <div class="filter-group">
-                    <select class="filter-select">
-                        <option value>All Genres</option>
+                    <select class="filter-select genre-selector">
+                        <option value="">All Genres</option>
                         <option value="fiction">Fiction</option>
                         <option value="non-fiction">Non-Fiction</option>
                         <option value="mystery">Mystery</option>
@@ -111,8 +111,8 @@
                         <option value="all">All</option>
                     </select>
 
-                    <select class="filter-select">
-                        <option value>All Formats</option>
+                    <select class="filter-select format-selector">
+                        <option value="">All Formats</option>
                         <option value="hardcover">Hardcover</option>
                         <option value="paperback">Paperback</option>
                         <option value="ebook">E-Book</option>
@@ -120,8 +120,8 @@
                         <option value="all">All</option>
                     </select>
 
-                    <select class="filter-select">
-                        <option value>Sort By</option>
+                    <select class="filter-select sort-selector">
+                        <option value="">Sort By</option>
                         <option value="newest">Newest First</option>
                         <option value="oldest">Oldest First</option>
                         <option value="title-asc">Title (A-Z)</option>
@@ -131,8 +131,8 @@
                         <option value="popular">Most Popular</option>
                     </select>
 
-                    <select class="filter-select">
-                        <option value>Availability</option>
+                    <select class="filter-select availability-selector">
+                        <option value="">Availability</option>
                         <option value="available">Available</option>
                         <option value="unavailable">Unavailable</option>
                         <option value="low-stock">Low Stock</option>
