--- a/frontend/pages/admin_dashboard.html
+++ b/frontend/pages/admin_dashboard.html
@@ -11,9 +11,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="./../CSS/admin_dashboard.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="./../CSS/modal.css">
+
     <script src="./../Script/admin_dashboard.js"></script>
     <script src="./../Script/header.js"></script>
     <script src="./../Script/footer.js"></script>
+    <script src="./../Script/modal.js"></script>
+
     <title>Admin Dashboard</title>
 </head>
 
@@ -192,6 +196,26 @@
     <button class="scroll-top">
         <i class="fas fa-arrow-up"></i>
     </button>
+     
+    <div id="book-modal" class="book-modal hidden">
+        <div class="modal-content">
+            <span id="close-modal" class="close-btn">&times;</span>
+            <div class="modal-book-info">
+                <img id="modal-book-cover" src="" alt="Book Cover" />
+                <div class="modal-book-details">
+                    <h2 id="modal-book-title"> <strong>Book Title </strong></h2>
+                    <p><strong>Author:</strong> <span id="modal-book-author"></span></p>
+                    <p><strong>Genre:</strong> <span id="modal-book-genre"></span></p>
+                    <p><strong>ISBN:</strong> <span id="modal-book-isbn"></span></p>
+                    <p><strong>Format:</strong> <span id="modal-book-format"></span></p>
+                    <p><strong>Availability:</strong> <span id="modal-book-availability"></span></p>
+                    <p><strong>Description:</strong></p>
+                    <p id="modal-book-description"></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
