--- a/frontend/pages/user_dashboard.html
+++ b/frontend/pages/user_dashboard.html
@@ -217,8 +217,25 @@
                 <i class="fas fa-arrow-up"></i>
             </a>
         </footer>
+        <div id="book-modal" class="modal hidden">
+            <div class="modal-content">
+                <span class="close-btn">&times;</span>
+                <img id="modal-image" src="" alt="Book Cover" />
+                <h2 id="modal-title"></h2>
+                <p id="modal-author"></p>
+                <p id="modal-description"></p>
+                <p><strong>Year:</strong> <span id="modal-year"></span></p>
+                <p><strong>Status:</strong> <span id="modal-status"></span></p>
+                <p><strong>Genre:</strong> <span id="modal-genre"></span></p>
+                <p><strong>Language:</strong> <span id="modal-language"></span></p>
+                <p><strong>Pages:</strong> <span id="modal-pages"></span></p>
+            </div>
+        </div>
         <script src="./../Script/footer.js"></script>
         <script src="./../Script/header.js"></script>
         <script src="./../Script/user_dashboard.js"></script>
+ 
+        
+
     </body>
 </html>
