--- a/frontend/pages/borrowed.html
+++ b/frontend/pages/borrowed.html
@@ -601,7 +601,8 @@
                 <i class="fas fa-arrow-up"></i>
             </a>
         </footer>
-        <script src="./../Script/footer.js"></script>
+        <script src="../Script/footer.js"></script>
+        <script src="../Script/borrowed.js"></script>
     </body>
 </html>
 
