--- a/frontend/pages/borrowed.html
+++ b/frontend/pages/borrowed.html
@@ -121,7 +121,7 @@
                 <!-- 1984 - Currently Borrowed - Overdue (12 days) -->
                 <div class="borrowed-item">
                     <div class="borrowed-cover">
-                        <i class="fas fa-book-open"></i>
+                        <img src="./../CSS/assets/book5.jpeg" alt="A Song of Ice and Fire book cover">
                     </div>
                     <div class="borrowed-details">
                         <h3 class="borrowed-title">1984</h3>
@@ -601,6 +601,25 @@
                 <i class="fas fa-arrow-up"></i>
             </a>
         </footer>
+        <div id="borrowed-modal" class="modal hidden">
+            <div class="modal-content">
+                <span class="close-btn">&times;</span>
+                <div class="modal-cover">
+                    <img id="modal-image" src="" alt="Book cover" />
+                </div>
+                <div class="modal-details">
+                    <h2 id="modal-title"></h2>
+                    <p id="modal-author"></p>
+                    <div class="modal-info">
+                        <p><strong>Borrowed On:</strong> <span id="modal-borrowed-date"></span></p>
+                        <p><strong>Due Date:</strong> <span id="modal-due-date"></span></p>
+                        <p><strong>Status:</strong> <span id="modal-status"></span></p>
+                        <p><strong>Format:</strong> <span id="modal-format"></span></p>
+                        <p><strong>Renewals Left:</strong> <span id="modal-renewals"></span></p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <script src="../Script/footer.js"></script>
         <script src="../Script/borrowed.js"></script>
     </body>
