Activate add, edit and delete

--- a/frontend/pages/admin_dashboard.html
+++ b/frontend/pages/admin_dashboard.html
@@ -81,12 +81,12 @@
     </div>
 
     <div class="saved hide">
-        <p>The book has been saved</p>
+        <p>Saved Successfully</p>
         <img src="./../CSS/assets/add.gif" alt="saved icon">
     </div>
 
     <div class="deleted hide">
-        <p>The book has been deleted</p>
+        <p>Deleted Successfully</p>
         <img src="./../CSS/assets/delete.gif" alt="Deleted icon">
     </div>
 
@@ -204,25 +204,6 @@
     <button class="scroll-top">
         <i class="fas fa-arrow-up"></i>
     </button>
-     
-    <div id="book-modal" class="book-modal hidden">
-        <div class="modal-content">
-            <span id="close-modal" class="close-btn">&times;</span>
-            <div class="modal-book-info">
-                <img id="modal-book-cover" src="" alt="Book Cover" />
-                <div class="modal-book-details">
-                    <h2 id="modal-book-title"> <strong>Book Title </strong></h2>
-                    <p><strong>Author:</strong> <span id="modal-book-author"></span></p>
-                    <p><strong>Genre:</strong> <span id="modal-book-genre"></span></p>
-                    <p><strong>ISBN:</strong> <span id="modal-book-isbn"></span></p>
-                    <p><strong>Format:</strong> <span id="modal-book-format"></span></p>
-                    <p><strong>Availability:</strong> <span id="modal-book-availability"></span></p>
-                    <p><strong>Description:</strong></p>
-                    <p id="modal-book-description"></p>
-                </div>
-            </div>
-        </div>
-    </div>
 
 </body>
 
