--- a/frontend/pages/add_edit.html
+++ b/frontend/pages/add_edit.html
@@ -69,7 +69,7 @@
         </div>
 
         <div class="error hide">
-            <p>The file you uploaded is not a photo</p>
+            <p>Error, must be an image</p>
             <img src="./../CSS/assets/alert.gif" alt="Error icon">
         </div>
 
@@ -91,7 +91,7 @@
                         <input type="file" id="img-input" class="hide">
                     </div>
                     <div class="details-form">
-                        <form action="admin_dashboard.html">
+                        <form>
                             <div class="field">
                                 <div class="input-header">
                                     <i class="fa-solid fa-book"></i>
