add star button

--- a/frontend/pages/borrowed.html
+++ b/frontend/pages/borrowed.html
@@ -124,6 +124,7 @@
                         <img src="./../CSS/assets/book5.jpeg" alt="A Song of Ice and Fire book cover">
                     </div>
                     <div class="borrowed-details">
+                        <button class="star-button"><i class="fas fa-star"></i></button>
                         <h3 class="borrowed-title">1984</h3>
                         <p class="borrowed-author">By George Orwell</p>
 
@@ -160,7 +161,8 @@
                     <div class="borrowed-cover">
                         <img src="./../CSS/assets/book_cover.jpg" alt="A Song of Ice and Fire book cover">
                     </div>
-                    <div class="borrowed-details">
+                    <div class="borrowed-details"> 
+                        <button class="star-button"><i class="fas fa-star"></i></button>
                         <h3 class="borrowed-title">A Song of Ice and Fire</h3>
                         <p class="borrowed-author">By R.R. Martin</p>
 
@@ -198,6 +200,7 @@
                         <i class="fas fa-book-open"></i>
                     </div>
                     <div class="borrowed-details">
+                        <button class="star-button"><i class="fas fa-star"></i></button>
                         <h3 class="borrowed-title">Brave New World</h3>
                         <p class="borrowed-author">By Aldous Huxley</p>
 
@@ -235,6 +238,7 @@
                         <i class="fas fa-book-open"></i>
                     </div>
                     <div class="borrowed-details">
+                        <button class="star-button"><i class="fas fa-star"></i></button>
                         <h3 class="borrowed-title">The Great Gatsby</h3>
                         <p class="borrowed-author">By F. Scott Fitzgerald</p>
 
@@ -272,6 +276,7 @@
                         <i class="fas fa-book-open"></i>
                     </div>
                     <div class="borrowed-details">
+                        <button class="star-button"><i class="fas fa-star"></i></button>
                         <h3 class="borrowed-title">The Hobbit</h3>
                         <p class="borrowed-author">By J.R.R. Tolkien</p>
 
@@ -312,6 +317,7 @@
                         <i class="fas fa-book-open"></i>
                     </div>
                     <div class="borrowed-details">
+                        <button class="star-button"><i class="fas fa-star"></i></button>
                         <h3 class="borrowed-title">Pride and Prejudice</h3>
                         <p class="borrowed-author">By Jane Austen</p>
 
@@ -344,6 +350,7 @@
                         <i class="fas fa-book-open"></i>
                     </div>
                     <div class="borrowed-details">
+                        <button class="star-button"><i class="fas fa-star"></i></button>
                         <h3 class="borrowed-title">The Lord of the Rings</h3>
                         <p class="borrowed-author">By J.R.R. Tolkien</p>
 
@@ -376,6 +383,7 @@
                         <i class="fas fa-book-open"></i>
                     </div>
                     <div class="borrowed-details">
+                        <button class="star-button"><i class="fas fa-star"></i></button>
                         <h3 class="borrowed-title">To Kill a Mockingbird</h3>
                         <p class="borrowed-author">By Harper Lee</p>
 
@@ -408,6 +416,7 @@
                         <i class="fas fa-book-open"></i>
                     </div>
                     <div class="borrowed-details">
+                        <button class="star-button"><i class="fas fa-star"></i></button>
                         <h3 class="borrowed-title">The Catcher in the Rye</h3>
                         <p class="borrowed-author">By J.D. Salinger</p>
 
@@ -445,9 +454,6 @@
 
             <div class="tab-panel favorites-list" id="favorites">
                 <!-- Pride and Prejudice - Previously Borrowed - Most Recent Return -->
-                 <div class="add_book_button">
-                    <button id="add_book" type="submit">add Book</button>
-                 </div>
                 <div class="favorite-item">
                     <div class="favorite-cover">
                         <i class="fas fa-book-open"></i>
