add star button

--- a/frontend/pages/books.html
+++ b/frontend/pages/books.html
@@ -128,6 +128,7 @@
                 <h2 class="featured-title">Featured Books</h2>
                 <div class="book-grid">
                     <div class="book-item">
+                        <button class="star-button"><i class="fas fa-star"></i></button>
                         <div class="book-cover">
                             <img src="./../CSS/assets/book_cover.jpg"
                                 alt="A Song of Ice and Fire book cover">
@@ -158,6 +159,7 @@
                     </div>
 
                     <div class="book-item">
+                        <button class="star-button"><i class="fas fa-star"></i></button>
                         <div class="book-cover">
                             <img
                                 src="./../CSS/assets/The_Great_Gatsby_Cover.jpg"
@@ -189,6 +191,7 @@
                     </div>
 
                     <div class="book-item">
+                        <button class="star-button"><i class="fas fa-star"></i></button>
                         <div class="book-cover">
                             <img src="./../CSS/assets/cover3.jpg"
                                 alt="To Kill a Mockingbird ">
@@ -219,6 +222,7 @@
                     </div>
 
                     <div class="book-item">
+                        <button class="star-button"><i class="fas fa-star"></i></button>
                         <div class="book-cover">
                             <i class="fas fa-book-open"></i>
                         </div>
@@ -244,6 +248,7 @@
                     </div>
 
                     <div class="book-item">
+                        <button class="star-button"><i class="fas fa-star"></i></button>
                         <div class="book-cover">
                             <i class="fas fa-book-open"></i>
                         </div>
@@ -269,6 +274,7 @@
                     </div>
 
                     <div class="book-item">
+                        <button class="star-button"><i class="fas fa-star"></i></button>
                         <div class="book-cover">
                             <i class="fas fa-book-open"></i>
                         </div>
@@ -294,6 +300,7 @@
                     </div>
 
                     <div class="book-item">
+                        <button class="star-button"><i class="fas fa-star"></i></button>
                         <div class="book-cover">
                             <i class="fas fa-book-open"></i>
                         </div>
@@ -319,6 +326,7 @@
                     </div>
 
                     <div class="book-item">
+                        <button class="star-button"><i class="fas fa-star"></i></button>
                         <div class="book-cover">
                             <i class="fas fa-book-open"></i>
                         </div>
@@ -344,6 +352,7 @@
                     </div>
 
                     <div class="book-item">
+                        <button class="star-button"><i class="fas fa-star"></i></button>
                         <div class="book-cover">
                             <i class="fas fa-book-open"></i>
                         </div>
@@ -369,6 +378,7 @@
                     </div>
 
                     <div class="book-item">
+                        <button class="star-button"><i class="fas fa-star"></i></button>
                         <div class="book-cover">
                             <i class="fas fa-book-open"></i>
                         </div>
@@ -439,7 +449,7 @@
         <script src="./../Script/footer.js"></script>
 
         
-        
+        <script src="./../Script/books.js"></script>
         <script src="./../Script/modal.js"> </script>
         <script src="./../Script/header.js"></script>
     </body>
