--- a/frontend/pages/user_dashboard.html
+++ b/frontend/pages/user_dashboard.html
@@ -113,7 +113,7 @@
                 <div class="favorites">
                     <div class="section-header">
                         <h2>❤️ Favorites</h2>
-                        <a href="borrowed.html" class="view-all">View All <i class="fas fa-arrow-right"></i></a>
+                        <a href="borrowed.html#favorites" class="view-all">View All <i class="fas fa-arrow-right"></i></a>
                     </div>
                     <div class="book-grid">
                         <div class="book-card">
