add light and dark mode add the profile page edit the variables to make overall font so big changes

--- a/frontend/pages/add_edit.html
+++ b/frontend/pages/add_edit.html
@@ -232,6 +232,8 @@
             </a>
         </footer>
         <script src="./../Script/footer.js"></script>
+    <script src="./../Script/theme.js"></script>
+
     </body>
 
 </html>
