--- a/frontend/pages/admin_dashboard.html
+++ b/frontend/pages/admin_dashboard.html
@@ -204,6 +204,9 @@
     <button class="scroll-top">
         <i class="fas fa-arrow-up"></i>
     </button>
+
+    
+    <script src="./../Script/theme.js"></script>
 </body>
 
 </html>
