--- a/frontend/pages/book_details.html
+++ b/frontend/pages/book_details.html
@@ -169,6 +169,8 @@
     </script>
     <script src="./../Script/header.js"></script>
     <script src="./../Script/footer.js"></script>
+    <script src="./../Script/theme.js"></script>
+
     </body>
 
 </html>
