--- a/frontend/pages/books.html
+++ b/frontend/pages/books.html
@@ -452,6 +452,8 @@
         <script src="./../Script/books.js"></script>
         <script src="./../Script/modal.js"> </script>
         <script src="./../Script/header.js"></script>
+    <script src="./../Script/theme.js"></script>
+
     </body>
 
 </html>
