--- a/frontend/pages/sign-in.html
+++ b/frontend/pages/sign-in.html
@@ -51,5 +51,7 @@
         <img src="./../CSS/assets/man-reading-design.png" alt="man reading a book">
     </section>
     <script src="./../Script/Forms_validation.js"></script>
+    <script src="./../Script/theme.js"></script>
+
 </body>
 </html>
