--- a/frontend/pages/sign-up.html
+++ b/frontend/pages/sign-up.html
@@ -56,6 +56,7 @@
         </form>
         <img src="./../CSS/assets/woman-reading-chair.png" alt="man reading a book">
     </section>
+    <script src="./../Script/theme.js"></script>
     <script src="./../Script/Forms_validation.js"></script>
 </body>
 </html>
