--- a/frontend/pages/user_dashboard.html
+++ b/frontend/pages/user_dashboard.html
@@ -260,6 +260,7 @@
         <script src="./../Script/footer.js"></script>
         <script src="./../Script/header.js"></script>
         <script src="./../Script/user_dashboard.js"></script>
+        <script src="./../Script/theme.js"></script>
  
         
 
