--- a/frontend/pages/borrowed.html
+++ b/frontend/pages/borrowed.html
@@ -628,6 +628,8 @@
         </div>
         <script src="../Script/footer.js"></script>
         <script src="../Script/borrowed.js"></script>
+    <script src="./../Script/theme.js"></script>
+
     </body>
 </html>
 
