--- a/frontend/pages/admin_dashboard.html
+++ b/frontend/pages/admin_dashboard.html
@@ -11,12 +11,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="./../CSS/admin_dashboard.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="./../CSS/modal.css">
 
     <script src="./../Script/admin_dashboard.js"></script>
     <script src="./../Script/header.js"></script>
     <script src="./../Script/footer.js"></script>
-    <script src="./../Script/modal.js"></script>
 
     <title>Admin Dashboard</title>
 </head>
@@ -66,6 +64,7 @@
                     <img src="./../CSS/assets/enceladus.jpg" alt="Book Cover" class="book-cover">
                 </div>
                 <div class="info">
+                    <label for="confirmation" class="id"></label>
                     <label for="confirmation" class="book-title"></label>
                     <label for="confirmation" class="author"></label>
                 </div>
@@ -99,7 +98,7 @@
         <section class="search-container">
             <form class="search-form">
                 <div class="search-box">
-                    <input type="search" class="search-input" placeholder="Search by title, author, or ISBN...">
+                    <input type="search" class="search-input" placeholder="Search by title, author, or ID...">
                     <!-- <button type="submit" class="search-btn"><i class="fas fa-search"></i></button> -->
                 </div>
 
