--- a/frontend/pages/user_dashboard.html
+++ b/frontend/pages/user_dashboard.html
@@ -20,6 +20,8 @@
                 </div>
                 <nav>
                     <ul class="nav-bar">
+                        <li> <a href="./profile.html">
+                            <i class="fas fa-user"></i>Profile</a></li>
                         <li><a href="#hero"><i class="fas fa-home"></i>
                                 Home</a></li>
                         <li><a href="./../pages/books.html"><i
@@ -52,7 +54,6 @@
             </div>
 
             <div class="dashboard-content">
-
                 <div class="notifications">
                     <h2>🔔 Notifications</h2>
                     <ul class="notification-list">
