Edit header and footer links

--- a/frontend/pages/add_edit.html
+++ b/frontend/pages/add_edit.html
@@ -29,20 +29,10 @@
                 </div>
                 <nav>
                     <ul class="nav-bar">
-                        <li><a href="./../../index.html#"><i
-                                    class="fas fa-home"></i> Home</a></li>
-                        <li><a href="./../../index.html#features"><i
-                                    class="fas fa-info-circle"></i>
-                                About</a></li>
-                        <li><a href="./admin_dashboard.html"><i
-                                    class="fa-solid fa-table-columns"></i>
-                                Dashboard</a></li>
-                        <li><a href="./../../index.html" id="login-link"><i
-                                    class="fas fa-sign-in-alt"></i> Log
-                                Out</a></li>
-                        <li><a href="./../../index.html#contact"><i
-                                    class="fas fa-envelope"></i>
-                                Contact</a></li>
+                        <li><a href="./profile.html"><i class="fas fa-user"></i> Profile</a></li>
+                        <li><a href="./admin_dashboard.html" class="active"><i class="fa-solid fa-table-columns"></i>
+                            Dashboard</a></li>
+                        <li><a href="./../../index.html" id="login-link"><i class="fas fa-sign-in-alt"></i> Log Out</a></li>
                     </ul>
                 </nav>
                 <button class="menu-toggle">
@@ -54,17 +44,10 @@
         <!-- Mobile Menu Side Panel -->
         <div class="mobile-menu">
             <ul class="mobile-nav">
-                <li><a href="./../../index.html#"><i class="fas fa-home"></i>
-                        Home</a></li>
-                <li><a href="./../../index.html#features"><i
-                            class="fas fa-info-circle"></i> About</a></li>
-                <li><a href="./admin_dashboard.html"><i
-                            class="fa-solid fa-table-columns"></i>
-                        Dashboard</a></li>
-                <li><a href="./../../index.html" id="login-link"><i
-                            class="fas fa-sign-in-alt"></i> Log Out</a></li>
-                <li><a href="./../../index.html#contact"><i
-                            class="fas fa-envelope"></i> Contact</a></li>
+                <li><a href="./profile.html"><i class="fas fa-user"></i> Profile</a></li>
+                <li><a href="./admin_dashboard.html" class="active"><i class="fa-solid fa-table-columns"></i>
+                            Dashboard</a></li>
+                <li><a href="./../../index.html" id="login-link"><i class="fas fa-sign-in-alt"></i> Log Out</a></li>
             </ul>
         </div>
 
@@ -211,10 +194,8 @@
                 <div class="footer-section">
                     <h3>Quick Links</h3>
                     <ul>
-                        <li><a href="./../../index.html">Home</a></li>
-                        <li><a href="./books.html">Books</a></li>
-                        <li><a
-                                href="./../../index.html#features">features</a></li>
+                        <li><a href="./profile.html">Profile</a></li>
+                        <li><a href="./admin_dashboard.html" class="active">Dashboard</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
