--- a/frontend/pages/admin_dashboard.html
+++ b/frontend/pages/admin_dashboard.html
@@ -28,12 +28,10 @@
             </div>
             <nav>
                 <ul class="nav-bar">
-                    <li><a href="./../../index.html#"><i class="fas fa-home"></i> Home</a></li>
-                    <li><a href="./../../index.html#features"><i class="fas fa-info-circle"></i> About</a></li>
+                    <li><a href="./profile.html"><i class="fas fa-user"></i> Profile</a></li>
                     <li><a href="./admin_dashboard.html" class="active"><i class="fa-solid fa-table-columns"></i>
                             Dashboard</a></li>
                     <li><a href="./../../index.html" id="login-link"><i class="fas fa-sign-in-alt"></i> Log Out</a></li>
-                    <li><a href="./../../index.html#contact"><i class="fas fa-envelope"></i> Contact</a></li>
                 </ul>
             </nav>
             <!-- Mobile menu toggle -->
@@ -46,11 +44,10 @@
     <!-- Mobile menu structure -->
     <div class="mobile-menu">
         <ul class="mobile-nav">
-            <li><a href="./../../index.html#"><i class="fas fa-home"></i> Home</a></li>
-            <li><a href="./../../index.html#features"><i class="fas fa-info-circle"></i> About</a></li>
-            <li><a href="./admin_dashboard.html"><i class="fa-solid fa-table-columns"></i> Dashboard</a></li>
+            <li><a href="./profile.html"><i class="fas fa-user"></i> Profile</a></li>
+            <li><a href="./admin_dashboard.html" class="active"><i class="fa-solid fa-table-columns"></i>
+                            Dashboard</a></li>
             <li><a href="./../../index.html" id="login-link"><i class="fas fa-sign-in-alt"></i> Log Out</a></li>
-            <li><a href="./../../index.html#contact"><i class="fas fa-envelope"></i> Contact</a></li>
         </ul>
     </div>
 
@@ -158,7 +155,7 @@
         <div class="books-container" id="books-container">
         </div>
 
-        <div class="books-pages">
+        <!-- <div class="books-pages">
             <input type="radio" id="btn1" name="toggle" class="hidden" checked>
             <label for="btn1" class="btn">1</label>
 
@@ -167,7 +164,7 @@
 
             <input type="radio" id="btn3" name="toggle" class="hidden">
             <label for="btn3" class="btn"><i class="fa fa-angle-right" aria-hidden="true"></i></label>
-        </div>
+        </div> -->
     </main>
 
     <footer>
@@ -184,9 +181,8 @@
             <div class="footer-section">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="./../../index.html">Home</a></li>
-                    <li><a href="./books.html">Books</a></li>
-                    <li><a href="./../../index.html#features">features</a></li>
+                    <li><a href="./profile.html">Profile</a></li>
+                    <li><a href="./admin_dashboard.html" class="active">Dashboard</a></li>
                 </ul>
             </div>
             <div class="footer-section">
