manage and fix the profile navigation

--- a/frontend/pages/user_dashboard.html
+++ b/frontend/pages/user_dashboard.html
@@ -38,6 +38,8 @@
         </header>
         <div class="mobile-menu">
             <ul class="mobile-nav">
+                <li> <a href="./profile.html">
+                    <i class="fas fa-user"></i>Profile</a></li>
                 <li><a href="#hero"><i class="fas fa-home"></i> Home</a></li>
                 <li><a href="./../pages/books.html"><i class="fas fa-book"></i>
                         Books</a></li>
