--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -21,8 +21,7 @@
           </div>
           <nav>
             <ul class="nav-bar">
-              <li><a href="./../pages/user_dashboard.html"><i class="fas fa-home"></i> Home</a></li>
-              <li><a href="./books.html"><i class="fas fa-book"></i> Books</a></li>
+              <li><a href="#" id="homeLink"><i class="fas fa-home"></i> Home</a></li>              <li><a href="./books.html"><i class="fas fa-book"></i> Books</a></li>
               <li><a href="./profile.html" class="active"><i class="fas fa-user"></i> Profile</a></li>
               <li><a href="./../../index.html"><i class="fas fa-sign-out-alt"></i> Log Out</a></li>
             </ul>
@@ -36,7 +35,7 @@
       <!-- Mobile Menu Side Panel -->
       <div class="mobile-menu">
         <ul class="mobile-nav">
-          <li><a href="./../pages/user_dashboard.html"><i class="fas fa-home"></i> Home</a></li>
+          <li><a href="#" id="mobileHomeLink"><i class="fas fa-home"></i> Home</a></li>
           <li><a href="./books.html"><i class="fas fa-book"></i> Books</a></li>
           <li><a href="./profile.html" class="active"><i class="fas fa-user"></i> Profile</a></li>
           <li><a href="./../../index.html"><i class="fas fa-sign-out-alt"></i> Log Out</a></li>
