--- a/frontend/pages/sign-in.html
+++ b/frontend/pages/sign-in.html
@@ -50,7 +50,7 @@
         </form>
         <img src="./../CSS/assets/man-reading-design.png" alt="man reading a book">
     </section>
-    <script src="./../Script/Forms_validation.js"></script>
+    <script src="./../Script/sign_in.js"></script>
     <script src="./../Script/theme.js"></script>
 
 </body>
