--- a/frontend/pages/sign-up.html
+++ b/frontend/pages/sign-up.html
@@ -57,6 +57,6 @@
         <img src="./../CSS/assets/woman-reading-chair.png" alt="man reading a book">
     </section>
     <script src="./../Script/theme.js"></script>
-    <script src="./../Script/Forms_validation.js"></script>
+    <script src="./../Script/sign_up.js"></script>
 </body>
 </html>
