--- a/frontend/pages/user_dashboard.html
+++ b/frontend/pages/user_dashboard.html
@@ -107,6 +107,7 @@
                                     <label for="friend-email">Email:</label>
                                     <input type="email" id="friend-email">
                                 </div>
+                                <div id="message-popup" class="message-popup"></div>
                                 <button type="submit">Add</button>
                                 <button type="button" onclick="hidePopup()">Cancel</button>
                             </form>
