connecting user's information

--- a/frontend/pages/sign-up.html
+++ b/frontend/pages/sign-up.html
@@ -25,6 +25,14 @@
             </div>
             <div class="field">
                 <div class="field-heading">
+                    <i class="fa-solid fa-user"></i>
+                    <label for="fullName">Full name</label>
+                </div>
+                <input class="input" type="text" id="fullName" name="fullName" placeholder="Enter your name">
+                <span class="error-text" id="name-error"></span>
+            </div>
+            <div class="field">
+                <div class="field-heading">
                     <i class="fa-solid fa-lock"></i>
                     <label for="password">password</label>
                 </div>
