--- a/index.html
+++ b/index.html
@@ -207,5 +207,6 @@
     <script src="./frontend/Script/theme.js"></script>
     <script src="./frontend/Script/header.js"></script>
     <script src="./frontend/Script/footer.js"></script>
+    <script src="./frontend/Script/home_page.js"></script>
   </body>
 </html>
